# ipyTransferFunction

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  version.py
ipyTransferFunction/: __init__.py  transfer_function.py
notebook/: example.ipynb
