[metadata]
version = 0.2.0
name = ipyTransferFunction
summary = Transfer function widget for the Blue Brain BioExplorer
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/favreau/ipyTransferFunction
author = Cyrille Favreau
author-email = cyrille.favreau@epfl.ch
license = LGPLv3
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = covid, covid19, coronavirus, bbp, blue, brain, virus, molecule, molecular system

[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D203,D212,D400,D401

[coverage:report]
show_missing = True
